SD Prototype/.metadata/.plugins/org.eclipse.cdt.ui/Prototype.build.log
14:40:53 **** Incremental Build of configuration Debug for project Prototype ****
make all 
Building file: ../Src/Syscalls.c
Invoking: MCU GCC Compiler
/Users/scottwall/Desktop/untitled folder/SeniorDesignGroup22/SD Prototype/Prototype/Debug
arm-none-eabi-gcc -mcpu=cortex-m7 -mthumb -mfloat-abi=hard -mfpu=fpv5-d16 -std=c99 -D__weak="__attribute__((weak))" -D__packed="__attribute__((__packed__))" -DUSE_HAL_DRIVER -DSTM32F767xx -I"/Users/scottwall/Desktop/untitled folder/SeniorDesignGroup22/SD Prototype/Prototype/Inc" -I"/Users/scottwall/Desktop/untitled folder/SeniorDesignGroup22/SD Prototype/Prototype/Drivers/STM32F7xx_HAL_Driver/Inc" -I"/Users/scottwall/Desktop/untitled folder/SeniorDesignGroup22/SD Prototype/Prototype/Drivers/STM32F7xx_HAL_Driver/Inc/Legacy" -I"/Users/scottwall/Desktop/untitled folder/SeniorDesignGroup22/SD Prototype/Prototype/Middlewares/Third_Party/FatFs/src/drivers" -I"/Users/scottwall/Desktop/untitled folder/SeniorDesignGroup22/SD Prototype/Prototype/Middlewares/ST/STM32_USB_Host_Library/Core/Inc" -I"/Users/scottwall/Desktop/untitled folder/SeniorDesignGroup22/SD Prototype/Prototype/Middlewares/ST/STM32_USB_Host_Library/Class/MSC/Inc" -I"/Users/scottwall/Desktop/untitled folder/SeniorDesignGroup22/SD Prototype/Prototype/Drivers/CMSIS/Device/ST/STM32F7xx/Include" -I"/Users/scottwall/Desktop/untitled folder/SeniorDesignGroup22/SD Prototype/Prototype/Middlewares/Third_Party/FatFs/src" -I"/Users/scottwall/Desktop/untitled folder/SeniorDesignGroup22/SD Prototype/Prototype/Drivers/CMSIS/Include"  -Os -g3 -Wall -fmessage-length=0 -ffunction-sections -c -fmessage-length=0 -MMD -MP -MF"Src/Syscalls.d" -MT"Src/Syscalls.o" -o "Src/Syscalls.o" "../Src/Syscalls.c"
../Src/Syscalls.c:45:27: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'asm'
 register char * stack_ptr asm("sp");
                           ^
../Src/Syscalls.c: In function '_sbrk':
../Src/Syscalls.c:98:18: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'asm'
  extern char end asm("end");
                  ^
../Src/Syscalls.c:98:18: warning: implicit declaration of function 'asm' [-Wimplicit-function-declaration]
../Src/Syscalls.c:103:15: error: 'end' undeclared (first use in this function)
   heap_end = &end;
               ^
../Src/Syscalls.c:103:15: note: each undeclared identifier is reported only once for each function it appears in
../Src/Syscalls.c:106:24: error: 'stack_ptr' undeclared (first use in this function)
  if (heap_end + incr > stack_ptr)
                        ^
make: *** [Src/Syscalls.o] Error 1

14:40:56 Build Finished (took 2s.87ms)

